--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-<head>
+	<head>
 		<meta charset="utf8"/>
-		<title>Лабараторна робота №2 (12 варіант)</title>
-</head>
+		<title>Лаборатрона №1</title>
+	</head>
 	<body>
 	</body>
 	<script src="main.js"></script>
